ffi/pigpio.h

typedef struct
{
   uint16_t addr;  
   uint16_t flags;
   uint16_t len;   
   uint8_t  *buf;  
} pi_i2c_msg_t;
typedef struct
{
   uint32_t control;          
   int rxCnt;                 
   char rxBuf[BSC_FIFO_SIZE]; 
   int txCnt;                 
   char txBuf[BSC_FIFO_SIZE]; 
} bsc_xfer_t;
int gpioWaveGetCbs(void);
int gpioWaveGetHighCbs(void);
int gpioWaveGetMaxCbs(void);
int gpioSerialReadOpen(unsigned user_gpio, unsigned baud, unsigned data_bits);
int gpioSerialReadInvert(unsigned user_gpio, unsigned invert);
int gpioSerialRead(unsigned user_gpio, void *buf, size_t bufSize);
int gpioSerialReadClose(unsigned user_gpio);
int i2cOpen(unsigned i2cBus, unsigned i2cAddr, unsigned i2cFlags);
int i2cClose(unsigned handle);
int i2cWriteQuick(unsigned handle, unsigned bit);
int i2cWriteByte(unsigned handle, unsigned bVal);
int i2cReadByte(unsigned handle);
int i2cWriteByteData(unsigned handle, unsigned i2cReg, unsigned bVal);
int i2cWriteWordData(unsigned handle, unsigned i2cReg, unsigned wVal);
int i2cReadByteData(unsigned handle, unsigned i2cReg);
int i2cReadWordData(unsigned handle, unsigned i2cReg);
int i2cProcessCall(unsigned handle, unsigned i2cReg, unsigned wVal);
int i2cWriteBlockData(
unsigned handle, unsigned i2cReg, char *buf, unsigned count);
int i2cReadBlockData(unsigned handle, unsigned i2cReg, char *buf);
int i2cBlockProcessCall(
unsigned handle, unsigned i2cReg, char *buf, unsigned count);
int i2cReadI2CBlockData(
unsigned handle, unsigned i2cReg, char *buf, unsigned count);
int i2cWriteI2CBlockData(
unsigned handle, unsigned i2cReg, char *buf, unsigned count);
int i2cReadDevice(unsigned handle, char *buf, unsigned count);
int i2cWriteDevice(unsigned handle, char *buf, unsigned count);
void i2cSwitchCombined(int setting);
int i2cSegments(unsigned handle, pi_i2c_msg_t *segs, unsigned numSegs);
int i2cZip(
   unsigned handle,
   char    *inBuf,
   unsigned inLen,
   char    *outBuf,
   unsigned outLen);
int bbI2COpen(unsigned SDA, unsigned SCL, unsigned baud);
int bbI2CClose(unsigned SDA);
int bbI2CZip(
   unsigned SDA,
   char    *inBuf,
   unsigned inLen,
   char    *outBuf,
   unsigned outLen);
int bscXfer(bsc_xfer_t *bsc_xfer);
int bbSPIOpen(
   unsigned CS, unsigned MISO, unsigned MOSI, unsigned SCLK,
   unsigned baud, unsigned spiFlags);
int bbSPIClose(unsigned CS);
int bbSPIXfer(
   unsigned CS,
   char    *inBuf,
   char    *outBuf,
   unsigned count);
int spiOpen(unsigned spiChan, unsigned baud, unsigned spiFlags);
int spiClose(unsigned handle);
int spiRead(unsigned handle, char *buf, unsigned count);
int spiWrite(unsigned handle, char *buf, unsigned count);
int spiXfer(unsigned handle, char *txBuf, char *rxBuf, unsigned count);
int serOpen(char *sertty, unsigned baud, unsigned serFlags);