lib/src/bindings.dart


  _dart_gpioWaveGetMaxPulses _gpioWaveGetMaxPulses;

  int gpioWaveGetCbs() {
    _gpioWaveGetCbs ??=
        _dylib.lookupFunction<_c_gpioWaveGetCbs, _dart_gpioWaveGetCbs>(
            'gpioWaveGetCbs');
    return _gpioWaveGetCbs();
  }

  _dart_gpioWaveGetCbs _gpioWaveGetCbs;

  int gpioWaveGetHighCbs() {
    _gpioWaveGetHighCbs ??=
        _dylib.lookupFunction<_c_gpioWaveGetHighCbs, _dart_gpioWaveGetHighCbs>(
            'gpioWaveGetHighCbs');
    return _gpioWaveGetHighCbs();
  }

  _dart_gpioWaveGetHighCbs _gpioWaveGetHighCbs;

  int gpioWaveGetMaxCbs() {
    _gpioWaveGetMaxCbs ??=
        _dylib.lookupFunction<_c_gpioWaveGetMaxCbs, _dart_gpioWaveGetMaxCbs>(
            'gpioWaveGetMaxCbs');
    return _gpioWaveGetMaxCbs();
  }

  _dart_gpioWaveGetMaxCbs _gpioWaveGetMaxCbs;

  int gpioSerialReadOpen(
    int user_gpio,
    int baud,
    int data_bits,
  ) {
    _gpioSerialReadOpen ??=
        _dylib.lookupFunction<_c_gpioSerialReadOpen, _dart_gpioSerialReadOpen>(
            'gpioSerialReadOpen');
    return _gpioSerialReadOpen(
      user_gpio,
      baud,
      data_bits,
    );
  }

  _dart_gpioSerialReadOpen _gpioSerialReadOpen;

  int gpioSerialReadInvert(
    int user_gpio,
    int invert,
  ) {
    _gpioSerialReadInvert ??= _dylib.lookupFunction<_c_gpioSerialReadInvert,
        _dart_gpioSerialReadInvert>('gpioSerialReadInvert');
    return _gpioSerialReadInvert(
      user_gpio,
      invert,
    );
  }

  _dart_gpioSerialReadInvert _gpioSerialReadInvert;

  int gpioSerialRead(
    int user_gpio,
    ffi.Pointer<ffi.Void> buf,
    int bufSize,
  ) {
    _gpioSerialRead ??=
        _dylib.lookupFunction<_c_gpioSerialRead, _dart_gpioSerialRead>(
            'gpioSerialRead');
    return _gpioSerialRead(
      user_gpio,
      buf,
      bufSize,
    );
  }

  _dart_gpioSerialRead _gpioSerialRead;

  int gpioSerialReadClose(
    int user_gpio,
  ) {
    _gpioSerialReadClose ??= _dylib.lookupFunction<_c_gpioSerialReadClose,
        _dart_gpioSerialReadClose>('gpioSerialReadClose');
    return _gpioSerialReadClose(
      user_gpio,
    );
  }

  _dart_gpioSerialReadClose _gpioSerialReadClose;

  int i2cOpen(
    int i2cBus,
    int i2cAddr,
    int i2cFlags,
  ) {
    _i2cOpen ??= _dylib.lookupFunction<_c_i2cOpen, _dart_i2cOpen>('i2cOpen');
    return _i2cOpen(
      i2cBus,
      i2cAddr,
      i2cFlags,
    );
  }

  _dart_i2cOpen _i2cOpen;

  int i2cClose(
    int handle,
  ) {
    _i2cClose ??=
        _dylib.lookupFunction<_c_i2cClose, _dart_i2cClose>('i2cClose');
    return _i2cClose(
      handle,
    );
  }

  _dart_i2cClose _i2cClose;

  int i2cWriteQuick(
    int handle,
    int bit,
  ) {
    _i2cWriteQuick ??= _dylib
        .lookupFunction<_c_i2cWriteQuick, _dart_i2cWriteQuick>('i2cWriteQuick');
    return _i2cWriteQuick(
      handle,
      bit,
    );
  }

  _dart_i2cWriteQuick _i2cWriteQuick;

  int i2cWriteByte(
    int handle,
    int bVal,
  ) {
    _i2cWriteByte ??= _dylib
        .lookupFunction<_c_i2cWriteByte, _dart_i2cWriteByte>('i2cWriteByte');
    return _i2cWriteByte(
      handle,
      bVal,
    );
  }

  _dart_i2cWriteByte _i2cWriteByte;

  int i2cReadByte(
    int handle,
  ) {
    _i2cReadByte ??=
        _dylib.lookupFunction<_c_i2cReadByte, _dart_i2cReadByte>('i2cReadByte');
    return _i2cReadByte(
      handle,
    );
  }

  _dart_i2cReadByte _i2cReadByte;

  int i2cWriteByteData(
    int handle,
    int i2cReg,
    int bVal,
  ) {
    _i2cWriteByteData ??=
        _dylib.lookupFunction<_c_i2cWriteByteData, _dart_i2cWriteByteData>(
            'i2cWriteByteData');
    return _i2cWriteByteData(
      handle,
      i2cReg,
      bVal,
    );
  }

  _dart_i2cWriteByteData _i2cWriteByteData;

  int i2cWriteWordData(
    int handle,
    int i2cReg,
    int wVal,
  ) {
    _i2cWriteWordData ??=
        _dylib.lookupFunction<_c_i2cWriteWordData, _dart_i2cWriteWordData>(
            'i2cWriteWordData');
    return _i2cWriteWordData(
      handle,
      i2cReg,
      wVal,
    );
  }

  _dart_i2cWriteWordData _i2cWriteWordData;

  int i2cReadByteData(
    int handle,
    int i2cReg,
  ) {
    _i2cReadByteData ??=
        _dylib.lookupFunction<_c_i2cReadByteData, _dart_i2cReadByteData>(
            'i2cReadByteData');
    return _i2cReadByteData(
      handle,
      i2cReg,
    );
  }

  _dart_i2cReadByteData _i2cReadByteData;

  int i2cReadWordData(
    int handle,
    int i2cReg,
  ) {
    _i2cReadWordData ??=
        _dylib.lookupFunction<_c_i2cReadWordData, _dart_i2cReadWordData>(
            'i2cReadWordData');
    return _i2cReadWordData(
      handle,
      i2cReg,
    );
  }

  _dart_i2cReadWordData _i2cReadWordData;

  int i2cProcessCall(
    int handle,
    int i2cReg,
    int wVal,
  ) {
    _i2cProcessCall ??=
        _dylib.lookupFunction<_c_i2cProcessCall, _dart_i2cProcessCall>(
            'i2cProcessCall');
    return _i2cProcessCall(
      handle,
      i2cReg,
      wVal,
    );
  }

  _dart_i2cProcessCall _i2cProcessCall;

  int i2cWriteBlockData(
    int handle,
    int i2cReg,
    ffi.Pointer<ffi.Int8> buf,
    int count,
  ) {
    _i2cWriteBlockData ??=
        _dylib.lookupFunction<_c_i2cWriteBlockData, _dart_i2cWriteBlockData>(
            'i2cWriteBlockData');
    return _i2cWriteBlockData(
      handle,
      i2cReg,
      buf,
      count,
    );
  }

  _dart_i2cWriteBlockData _i2cWriteBlockData;

  int i2cReadBlockData(
    int handle,
    int i2cReg,
    ffi.Pointer<ffi.Int8> buf,
  ) {
    _i2cReadBlockData ??=
        _dylib.lookupFunction<_c_i2cReadBlockData, _dart_i2cReadBlockData>(
            'i2cReadBlockData');
    return _i2cReadBlockData(
      handle,
      i2cReg,
      buf,
    );
  }

  _dart_i2cReadBlockData _i2cReadBlockData;

  int i2cBlockProcessCall(
    int handle,
    int i2cReg,
    ffi.Pointer<ffi.Int8> buf,
    int count,
  ) {
    _i2cBlockProcessCall ??= _dylib.lookupFunction<_c_i2cBlockProcessCall,
        _dart_i2cBlockProcessCall>('i2cBlockProcessCall');
    return _i2cBlockProcessCall(
      handle,
      i2cReg,
      buf,
      count,
    );
  }

  _dart_i2cBlockProcessCall _i2cBlockProcessCall;

  int i2cReadI2CBlockData(
    int handle,
    int i2cReg,
    ffi.Pointer<ffi.Int8> buf,
    int count,
  ) {
    _i2cReadI2CBlockData ??= _dylib.lookupFunction<_c_i2cReadI2CBlockData,
        _dart_i2cReadI2CBlockData>('i2cReadI2CBlockData');
    return _i2cReadI2CBlockData(
      handle,
      i2cReg,
      buf,
      count,
    );
  }

  _dart_i2cReadI2CBlockData _i2cReadI2CBlockData;

  int i2cWriteI2CBlockData(
    int handle,
    int i2cReg,
    ffi.Pointer<ffi.Int8> buf,
    int count,
  ) {
    _i2cWriteI2CBlockData ??= _dylib.lookupFunction<_c_i2cWriteI2CBlockData,
        _dart_i2cWriteI2CBlockData>('i2cWriteI2CBlockData');
    return _i2cWriteI2CBlockData(
      handle,
      i2cReg,
      buf,
      count,
    );
  }

  _dart_i2cWriteI2CBlockData _i2cWriteI2CBlockData;

  int i2cReadDevice(
    int handle,
    ffi.Pointer<ffi.Int8> buf,
    int count,
  ) {
    _i2cReadDevice ??= _dylib
        .lookupFunction<_c_i2cReadDevice, _dart_i2cReadDevice>('i2cReadDevice');
    return _i2cReadDevice(
      handle,
      buf,
      count,
    );
  }

  _dart_i2cReadDevice _i2cReadDevice;

  int i2cWriteDevice(
    int handle,
    ffi.Pointer<ffi.Int8> buf,
    int count,
  ) {
    _i2cWriteDevice ??=
        _dylib.lookupFunction<_c_i2cWriteDevice, _dart_i2cWriteDevice>(
            'i2cWriteDevice');
    return _i2cWriteDevice(
      handle,
      buf,
      count,
    );
  }

  _dart_i2cWriteDevice _i2cWriteDevice;

  void i2cSwitchCombined(
    int setting,
  ) {
    _i2cSwitchCombined ??=
        _dylib.lookupFunction<_c_i2cSwitchCombined, _dart_i2cSwitchCombined>(
            'i2cSwitchCombined');
    return _i2cSwitchCombined(
      setting,
    );
  }

  _dart_i2cSwitchCombined _i2cSwitchCombined;

  int i2cSegments(
    int handle,
    ffi.Pointer<pi_i2c_msg_t> segs,
    int numSegs,
  ) {
    _i2cSegments ??=
        _dylib.lookupFunction<_c_i2cSegments, _dart_i2cSegments>('i2cSegments');
    return _i2cSegments(
      handle,
      segs,
      numSegs,
    );
  }

  _dart_i2cSegments _i2cSegments;

  int i2cZip(
    int handle,
    ffi.Pointer<ffi.Int8> inBuf,
    int inLen,
    ffi.Pointer<ffi.Int8> outBuf,
    int outLen,
  ) {
    _i2cZip ??= _dylib.lookupFunction<_c_i2cZip, _dart_i2cZip>('i2cZip');
    return _i2cZip(
      handle,
      inBuf,
      inLen,
      outBuf,
      outLen,
    );
  }

  _dart_i2cZip _i2cZip;

  int bbI2COpen(
    int SDA,
    int SCL,
    int baud,
  ) {
    _bbI2COpen ??=
        _dylib.lookupFunction<_c_bbI2COpen, _dart_bbI2COpen>('bbI2COpen');
    return _bbI2COpen(
      SDA,
      SCL,
      baud,
    );
  }

  _dart_bbI2COpen _bbI2COpen;

  int bbI2CClose(
    int SDA,
  ) {
    _bbI2CClose ??=
        _dylib.lookupFunction<_c_bbI2CClose, _dart_bbI2CClose>('bbI2CClose');
    return _bbI2CClose(
      SDA,
    );
  }

  _dart_bbI2CClose _bbI2CClose;

  int bbI2CZip(
    int SDA,
    ffi.Pointer<ffi.Int8> inBuf,
    int inLen,
    ffi.Pointer<ffi.Int8> outBuf,
    int outLen,
  ) {
    _bbI2CZip ??=
        _dylib.lookupFunction<_c_bbI2CZip, _dart_bbI2CZip>('bbI2CZip');
    return _bbI2CZip(
      SDA,
      inBuf,
      inLen,
      outBuf,
      outLen,
    );
  }

  _dart_bbI2CZip _bbI2CZip;

  int bscXfer(
    ffi.Pointer<bsc_xfer_t> bsc_xfer,
  ) {
    _bscXfer ??= _dylib.lookupFunction<_c_bscXfer, _dart_bscXfer>('bscXfer');
    return _bscXfer(
      bsc_xfer,
    );
  }

  _dart_bscXfer _bscXfer;

  int bbSPIOpen(
    int CS,
    int MISO,
    int MOSI,
    int SCLK,
    int baud,
    int spiFlags,
  ) {
    _bbSPIOpen ??=
        _dylib.lookupFunction<_c_bbSPIOpen, _dart_bbSPIOpen>('bbSPIOpen');
    return _bbSPIOpen(
      CS,
      MISO,
      MOSI,
      SCLK,
      baud,
      spiFlags,
    );
  }

  _dart_bbSPIOpen _bbSPIOpen;

  int bbSPIClose(
    int CS,
  ) {
    _bbSPIClose ??=
        _dylib.lookupFunction<_c_bbSPIClose, _dart_bbSPIClose>('bbSPIClose');
    return _bbSPIClose(
      CS,
    );
  }

  _dart_bbSPIClose _bbSPIClose;

  int bbSPIXfer(
    int CS,
    ffi.Pointer<ffi.Int8> inBuf,
    ffi.Pointer<ffi.Int8> outBuf,
    int count,
  ) {
    _bbSPIXfer ??=
        _dylib.lookupFunction<_c_bbSPIXfer, _dart_bbSPIXfer>('bbSPIXfer');
    return _bbSPIXfer(
      CS,
      inBuf,
      outBuf,
      count,
    );
  }

  _dart_bbSPIXfer _bbSPIXfer;

  int spiOpen(
    int spiChan,
    int baud,
    int spiFlags,
  ) {
    _spiOpen ??= _dylib.lookupFunction<_c_spiOpen, _dart_spiOpen>('spiOpen');
    return _spiOpen(
      spiChan,
      baud,
      spiFlags,
    );
  }

  _dart_spiOpen _spiOpen;

  int spiClose(
    int handle,
  ) {
    _spiClose ??=
        _dylib.lookupFunction<_c_spiClose, _dart_spiClose>('spiClose');
    return _spiClose(
      handle,
    );
  }

  _dart_spiClose _spiClose;

  int spiRead(
    int handle,
    ffi.Pointer<ffi.Int8> buf,
    int count,
  ) {
    _spiRead ??= _dylib.lookupFunction<_c_spiRead, _dart_spiRead>('spiRead');
    return _spiRead(
      handle,
      buf,
      count,
    );
  }

  _dart_spiRead _spiRead;

  int spiWrite(
    int handle,
    ffi.Pointer<ffi.Int8> buf,
    int count,
  ) {
    _spiWrite ??=
        _dylib.lookupFunction<_c_spiWrite, _dart_spiWrite>('spiWrite');
    return _spiWrite(
      handle,
      buf,
      count,
    );
  }

  _dart_spiWrite _spiWrite;

  int spiXfer(
    int handle,
    ffi.Pointer<ffi.Int8> txBuf,
    ffi.Pointer<ffi.Int8> rxBuf,
    int count,
  ) {
    _spiXfer ??= _dylib.lookupFunction<_c_spiXfer, _dart_spiXfer>('spiXfer');
    return _spiXfer(
      handle,
      txBuf,
      rxBuf,
      count,
    );
  }

  _dart_spiXfer _spiXfer;

  int serOpen(
    ffi.Pointer<ffi.Int8> sertty,
    int baud,
    int serFlags,
  ) {
    _serOpen ??= _dylib.lookupFunction<_c_serOpen, _dart_serOpen>('serOpen');
    return _serOpen(
      sertty,
      baud,
      serFlags,
    );
  }

  _dart_serOpen _serOpen;
